--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,6 +8,11 @@
   "theme_color": "#3b82f6",
   "icons": [
     {
+      "src": "icons/icon-48x48.png",
+      "sizes": "48x48",
+      "type": "image/png"
+    },
+    {
       "src": "icons/icon-72x72.png",
       "sizes": "72x72",
       "type": "image/png"
@@ -37,6 +42,11 @@
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
+    },
+    {
+      "src": "icons/icon-256x256.png",
+      "sizes": "256x256",
+      "type": "image/png"
     },
     {
       "src": "icons/icon-384x384.png",
